--- a/src/main/webapp/app/entities/skladniki/skladniki.component.html
+++ b/src/main/webapp/app/entities/skladniki/skladniki.component.html
@@ -66,31 +66,27 @@
         <table class="table table-striped" aria-describedby="page-heading">
             <thead>
             <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse" [callback]="transition.bind(this)">
-            <th scope="col"  jhiSortBy="id"><span>ID</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th scope="col"><span></span></th>
             <th scope="col"  jhiSortBy="nazwa"><span>Nazwa</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th scope="col"  jhiSortBy="zdjecie"><span>Zdjęcie</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th scope="col"  jhiSortBy="jednostka"><span>Jednostka</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th scope="col"  jhiSortBy="kategoria"><span>Kategoria</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th scope="col"  jhiSortBy="kalorieSto"><span>Ilość kalorii [100 / sztuka]</span> <fa-icon [icon]="'sort'"></fa-icon></th>
-            <th scope="col"  jhiSortBy="kalorieJednostka"><span>Kalorie Jednostka</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th scope="col"  jhiSortBy="kalorieSto"><span>Ilość kalorii [100g|ml/1 sztuka]</span> <fa-icon [icon]="'sort'"></fa-icon></th>
+            <th scope="col"  jhiSortBy="jednostka"><span>Jednostka</span> <fa-icon [icon]="'sort'"></fa-icon></th>
             <th scope="col"><span>Ilość [g|ml|szt]</span></th>
             <th scope="col"></th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let skladniki of skladnikis ;trackBy: trackId">
-                <td><a [routerLink]="['/skladniki', skladniki.id, 'view' ]">{{skladniki.id}}</a></td>
-                <td>{{skladniki.nazwa}}</td>
                 <td>
                     <a *ngIf="skladniki.zdjecie" (click)="openFile(skladniki.zdjecieContentType, skladniki.zdjecie)">
                         <img [src]="'data:' + skladniki.zdjecieContentType + ';base64,' + skladniki.zdjecie" style="max-height: 30px;" alt="skladniki image"/>
                     </a>
                     <span *ngIf="skladniki.zdjecie"></span>
                 </td>
-                <td>{{skladniki.jednostka}}</td>
+                <td>{{skladniki.nazwa}}</td>
                 <td>{{skladniki.kategoria}}</td>
                 <td>{{skladniki.kalorieSto}}</td>
-                <td>{{skladniki.kalorieJednostka}}</td>
+                <td>{{skladniki.jednostka}}</td>
                 <td><input class="form-control" type="number" [formControl]="ilosc"></td>
                 <td class="text-right">
                     <div class="btn-group">
@@ -108,11 +104,13 @@
                         </button>
                         <button type="submit"
                                 [routerLink]="['/skladniki', skladniki.id, 'edit']"
+                                *jhiHasAnyAuthority="'ROLE_ADMIN'"
                                 class="btn btn-primary btn-sm">
                             <fa-icon [icon]="'pencil-alt'"></fa-icon>
                             <span class="d-none d-md-inline">Edytuj</span>
                         </button>
                         <button type="submit" (click)="delete(skladniki)"
+                                *jhiHasAnyAuthority="'ROLE_ADMIN'"
                                 class="btn btn-danger btn-sm">
                             <fa-icon [icon]="'times'"></fa-icon>
                             <span class="d-none d-md-inline">Usuń</span>
