Pobieranie Składników Przepisu dla Przepisu

--- a/src/main/webapp/app/entities/przepis/przepis-detail.component.html
+++ b/src/main/webapp/app/entities/przepis/przepis-detail.component.html
@@ -5,6 +5,7 @@
             <hr>
             <jhi-alert-error></jhi-alert-error>
             <dl class="row-md jh-entity-details">
+                <dt>{{przepis.id}}</dt>
                 <dt><span>Typ Przepisu</span></dt>
                 <dd>
                     <span>{{przepis.typPrzepisu}}</span>
