--- a/src/main/webapp/app/entities/przepis/przepis.component.html
+++ b/src/main/webapp/app/entities/przepis/przepis.component.html
@@ -42,6 +42,7 @@
                 <td class="text-right">
                     <div class="btn-group">
                         <button type="submit"
+                                (click)="getAllPrzepisSkladniki(przepis.id)"
                                 [routerLink]="['/przepis', przepis.id, 'view' ]"
                                 class="btn btn-info btn-sm">
                             <fa-icon [icon]="'eye'"></fa-icon>
